--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "bcrypt": "^5.1.0",
     "child_process": "^1.0.2",
     "colors": "^1.4.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
     "openai": "^3.3.0",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
